renmaed app and getting clouid

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">goingkoth</string>
+    <string name="app_name">AR Room Designer</string>
     <string name="place_object">Place object</string>
     <string name="new_object">Delete Selected Object</string>
     <string name="instant_placement">Instant Placement</string>
